--- a/modules/docs/arrow-docs/docs/_includes/_top-version-warning.html
+++ b/modules/docs/arrow-docs/docs/_includes/_top-version-warning.html
@@ -16,25 +16,22 @@
 <div id="topWarning" class="top-warning">
     <div class="top-container">
         <a href="{{ previous_version.url | append: 'docs/' }}">
-          <span id="top-previous">
+          <span id="top-previous" data-title="{{ previous_version.title }}" data-url="{{ previous_version.url }}">
             {{ site.data.doc-versions.previous }} {{ previous_version.title }}
           </span>
-          <span id="previous" class="disabled"> {{ previous_version.url }} </span>
         </a>
         <a href="{{ stable_version.url | append: 'docs/' }}" class="middle-tab">
-          <span id="top-stable"">
+          <span id="top-stable" data-title="{{ stable_version.title }}" data-url="{{ stable_version.url }}">
             {{ site.data.doc-versions.stable }} {{ stable_version.title }}
           </span>
-          <span id="stable" class="disabled">{{ stable_version.url }}</span>
         </a>
         <a href="{{ next_version.url | append: 'docs/' }}">
-          <span id="top-next">
+          <span id="top-next" data-title="{{ next_version.title }}" data-url="{{ next_version.url }}">
             {{ site.data.doc-versions.next }} {{ next_version.title }}
           </span>
-          <span id="next" class="disabled">{{ next_version.url }}</span>
         </a>
     </div>
   <div onclick="closeTop()" class="close">
-    <img src="../img/close.svg" alt="close" />
+    <img src="/img/close.svg" alt="close" />
   </div>
 </div>
