--- a/modules/docs/arrow-docs/docs/_sass/components/_wrapper.scss
+++ b/modules/docs/arrow-docs/docs/_sass/components/_wrapper.scss
@@ -3,6 +3,7 @@
 // -----------------------------------------------
 
 #wrapper {
+    background: #ecf0fc;
     padding-left: 250px;
     transition: padding 0.4s ease-in-out;
     &.toggled {
