Gitter action bara fix

--- a/modules/docs/arrow-docs/docs/_sass/base/_global.scss
+++ b/modules/docs/arrow-docs/docs/_sass/base/_global.scss
@@ -163,3 +163,8 @@ table {
 [class*="indirect-injection"] {
   opacity: 0;
 }
+
+// Gitter action bar fix
+.gitter-chat-embed-action-bar {
+  z-index: 11;
+}
