Sidebar behaviour improvements: not showing behind elements overflow

--- a/modules/docs/arrow-docs/docs/_sass/components/_top-warning.scss
+++ b/modules/docs/arrow-docs/docs/_sass/components/_top-warning.scss
@@ -6,7 +6,7 @@
     background-color: $top-warning-base;
     color: $white;
     position: sticky;
-    top: 0px;
+    top: 0;
     width: 100%;
     z-index: 2;
     display: block;
