--- a/modules/docs/arrow-docs/docs/_sass/components/_wrapper.scss
+++ b/modules/docs/arrow-docs/docs/_sass/components/_wrapper.scss
@@ -69,6 +69,7 @@
     #wrapper.toggled {
         #sidebar-wrapper {
             left: 0;
+            top: 0;
             width: 100%;
 
             .sidebar-toggle {
@@ -82,6 +83,16 @@
                 }
             }
         }
+
+        #doc-wrapper {
+          height: 100vh;
+          overflow: hidden;
+        }
+
+    }
+
+    #topWarning ~ #wrapper.toggled #doc-wrapper {
+      height: calc(100vh - 43px);
     }
 }
 
