--- a/arrow-version/_sass/components/docs/_sidebar-nav.scss
+++ b/arrow-version/_sass/components/docs/_sidebar-nav.scss
@@ -15,6 +15,7 @@
 
             &:hover {
                 text-decoration: none;
+                background: #875;
             }
 
             .fa {
@@ -37,16 +38,14 @@
 
         ul {
             display: none;
-            padding: ($base-point-grid * 2) ($base-point-grid * 3);
+            
 
             li {
                 a {
-                    display: flex;
-                    justify-content: flex-start;
-                    align-items: center;
+                    display: block;
                     @include links($white, $white, rgba($white, 0.5), rgba($white, 0.5));
 
-                    padding: $base-point-grid 0;
+                    padding: $base-point-grid ($base-point-grid * 2);
                     font-size: 15px;
 
                     .fa {
