--- a/arrow-version/_sass/components/docs/_sidebar-optics.scss
+++ b/arrow-version/_sass/components/docs/_sidebar-optics.scss
@@ -1,93 +1,99 @@
 .optics {
-  background: $optics-background;
+    background: $optics-background;
 }
 
 #optics-sidebar-nav {
-  .sidebar-nav-item {
-    > a {
-      &:hover {
-        background: $optics-hover;
-      }
-    }
+    .sidebar-nav-item {
+        > a {
+            &:hover {
+                background: $optics-hover;
+            }
+        }
 
-    &.active {
-      > a {
-        background: $optics-hover;
-        border-left: 4px solid $optics-color;
-      }
-    }
+        &.active {
+            > a {
+                background: $optics-hover;
+                border-left: 4px solid $optics-color;
+            }
+        }
 
-    ul {
-      background: $optics-hover;
+        ul {
+            background: $optics-hover;
+        }
     }
-  }
 }
 
 #cat-optics-dropdown {
-  min-width: $sidebar-cat-button;
+    min-width: $sidebar-cat-button;
 
-  .sidebar-nav {
-    .sidebar-nav-item {
-      > a {
-        &:hover {
-          background: $optics-hover;
-          box-shadow: $sidebar-cat-dropdow;
+    .sidebar-nav {
+        .sidebar-nav-item {
+            > a {
+                &:hover {
+                    background: $optics-hover;
+                    box-shadow: $sidebar-cat-dropdow;
+                }
+            }
+
+            &.active {
+                > a {
+                    background: $optics-hover;
+                    box-shadow: $sidebar-cat-dropdow;
+                }
+            }
+
+            ul {
+                width: 100%;
+                z-index: 1;
+                box-shadow: $sidebar-cat-dropdow;
+                background: $optics-hover;
+
+                a {
+                    color: $white;
+                    transition: all $base-duration $base-timing;
+
+                    &:hover {
+                        background: rgba($white, 0.05);
+                        color: rgba($white, 0.8);
+                    }
+                }
+            }
         }
-      }
-
-      &.active {
-        > a {
-          background: $optics-hover;
-          box-shadow: $sidebar-cat-dropdow;
-        }
-      }
-
-      ul {
-        width: 100%;
-        z-index: 1;
-        box-shadow: $sidebar-cat-dropdow;
-        background: $optics-hover;
-
-        a {
-          color: $white;
-        }
-      }
     }
-  }
 }
 
 #doc-optics-version-button {
-  .sidebar-doc-versions {
-    .sidebar-nav-item {
-      > a {
-        &:hover {
-          background: $optics-hover;
-          box-shadow: $sidebar-cat-dropdow;
+    .sidebar-doc-versions {
+        .sidebar-nav-item {
+            > a {
+                &:hover {
+                    background: $optics-hover;
+                    box-shadow: $sidebar-cat-dropdow;
+                }
+            }
+
+            &.active {
+                > a {
+                    background: $optics-hover;
+                    box-shadow: $sidebar-cat-dropdow;
+                }
+            }
+
+            ul {
+                width: 100%;
+                z-index: 1;
+                box-shadow: $sidebar-cat-dropdow;
+                background: $optics-hover;
+
+                a {
+                    color: $white;
+                    padding-left: 10px;
+
+                    &:hover {
+                        @include links($white, $white, rgba($white, 0.5), rgba($white, 0.5));
+                    }
+                }
+            }
         }
-      }
-
-      &.active {
-        > a {
-          background: $optics-hover;
-          box-shadow: $sidebar-cat-dropdow;
-        }
-      }
-
-      ul {
-        width: 100%;
-        z-index: 1;
-        box-shadow: $sidebar-cat-dropdow;
-        background: $optics-hover;
-
-        a {
-          color: $white;
-          padding-left: 10px;
-
-          &:hover {
-            @include links($white, $white, rgba($white, 0.5), rgba($white, 0.5));
-          }
-        }
-      }
     }
-  }
 }
