--- a/arrow-version/_sass/components/docs/_sidebar-optics.scss
+++ b/arrow-version/_sass/components/docs/_sidebar-optics.scss
@@ -5,6 +5,7 @@
 #optics-sidebar-nav {
     .sidebar-nav-item {
         > a {
+            transition: background $base-duration $base-timing;
             &:hover {
                 background: $optics-hover;
             }
@@ -29,6 +30,7 @@
     .sidebar-nav {
         .sidebar-nav-item {
             > a {
+                transition: background $base-duration $base-timing;
                 &:hover {
                     background: $optics-hover;
                     box-shadow: $sidebar-cat-dropdow;
@@ -66,6 +68,7 @@
     .sidebar-doc-versions {
         .sidebar-nav-item {
             > a {
+                transition: background $base-duration $base-timing;
                 &:hover {
                     background: $optics-hover;
                     box-shadow: $sidebar-cat-dropdow;
