--- a/arrow-version/_sass/components/docs/_sidebar-optics.scss
+++ b/arrow-version/_sass/components/docs/_sidebar-optics.scss
@@ -20,6 +20,14 @@
 
         ul {
             background: $optics-hover;
+            li {
+                a {
+                    &:before {
+                        content: "•";
+                        margin-right: ($base-point-grid * 2);
+                    }
+                }
+            }
         }
     }
 }
