--- a/arrow-version/_sass/utils/_variables.scss
+++ b/arrow-version/_sass/utils/_variables.scss
@@ -84,7 +84,7 @@ $gutter-margin: ($base-point-grid * 4);
 // Border
 // -----------------------------------------------
 $border-color: rgba($gray-primary, 0.1);
-$doc-header-border: rgba($brand-primary, 0.15);
+$doc-header-border: rgba($brand-secondary, 0.8);
 $sidebar-cat-dropdow: rgba(0, 0, 0, 0.2) 0 2px 8px 0;
 // Sidebar Sizes
 // -----------------------------------------------
