styles doc-content libraries

--- a/arrow-version/_sass/components/docs/_code.scss
+++ b/arrow-version/_sass/components/docs/_code.scss
@@ -9,6 +9,7 @@ ul {
         padding: 0 $base-point-grid ($base-point-grid - 4) $base-point-grid;
         font-size: 16px;
         border-radius: 3px;
+        color: rgba(#263238, 0.7);
     }
 }
 
