--- a/arrow-version/_sass/components/docs/_doc-content-fx.scss
+++ b/arrow-version/_sass/components/docs/_doc-content-fx.scss
@@ -1,4 +1,4 @@
-// DOC CONTENT CORE
+// DOC CONTENT FX
 // -----------------------------------------------
 // -----------------------------------------------
 
@@ -11,18 +11,18 @@
         p,
         ul {
             code {
-                background: rgba($core-background, 0.08);
+                background: rgba($fx-background, 0.08);
             }
         }
 
         .hljs {
-            background: rgba($core-background, 0.05);
+            background: rgba($fx-background, 0.05);
         }
 
         .hljs-doctag,
         .hljs-formula,
         .hljs-keyword {
-            color: $core-color;
+            color: $fx-color;
         }
 
         .hljs-built_in,
