--- a/arrow-version/css/docs-styles.scss
+++ b/arrow-version/css/docs-styles.scss
@@ -31,5 +31,9 @@
 @import "components/docs/sidebar-meta";
 @import "components/docs/sidebar-incubator";
 @import "components/docs/doc-content-core";
+@import "components/docs/doc-content-fx";
+@import "components/docs/doc-content-optics";
+@import "components/docs/doc-content-meta";
+@import "components/docs/doc-content-incubator";
 
 @include dropdown($dropdown-config...);
