--- a/arrow-version/_sass/components/docs/_doc-content-optics.scss
+++ b/arrow-version/_sass/components/docs/_doc-content-optics.scss
@@ -2,10 +2,10 @@
 // -----------------------------------------------
 // -----------------------------------------------
 
-.doc-content-core {
+.doc-content-optics {
     .doc-content {
         a {
-            color: $core-color;
+            color: $optics-color;
         }
 
         p,
