--- a/arrow-version/_sass/components/docs/_sidebar-core.scss
+++ b/arrow-version/_sass/components/docs/_sidebar-core.scss
@@ -80,6 +80,7 @@
 #doc-core-version-button {
     .sidebar-doc-versions {
         .sidebar-nav-item {
+            background: $core-background;
 
             > a {
                 transition: background $base-duration $base-timing;
