--- a/arrow-version/_sass/components/docs/_sidebar-fx.scss
+++ b/arrow-version/_sass/components/docs/_sidebar-fx.scss
@@ -76,7 +76,7 @@
 #doc-fx-version-button {
     .sidebar-doc-versions {
         .sidebar-nav-item {
-
+            background: $fx-background;
             > a {
                 transition: background $base-duration $base-timing;
                 &:hover {
