--- a/arrow-version/_sass/components/docs/_sidebar-incubator.scss
+++ b/arrow-version/_sass/components/docs/_sidebar-incubator.scss
@@ -75,6 +75,7 @@
 #doc-inc-version-button {
     .sidebar-doc-versions {
         .sidebar-nav-item {
+            background: $incubator-background;
             > a {
                 transition: background $base-duration $base-timing;
                 &:hover {
