--- a/arrow-version/_sass/components/docs/_doc-content-fx.scss
+++ b/arrow-version/_sass/components/docs/_doc-content-fx.scss
@@ -29,5 +29,18 @@
         .hljs-class .hljs-title {
             color: #F28B2D;
         }
+        
+        .button-video {
+            background: $white;
+            border: 2px solid $fx-color;
+            transition: background $base-duration; 
+            
+            &:hover {
+                background: $fx-color;
+                color: $white;
+            } 
+            
+            
+        } 
     }
 }
