--- a/arrow-version/_sass/components/docs/_doc-content-meta.scss
+++ b/arrow-version/_sass/components/docs/_doc-content-meta.scss
@@ -29,5 +29,17 @@
         .hljs-class .hljs-title {
             color: #F28B2D;
         }
+
+        .button-video {
+            background: $white;
+            border: 2px solid $meta-color;
+            transition: background $base-duration;
+
+            &:hover {
+                background: $meta-color;
+                color: $white;
+            }
+
+        }
     }
 }
