--- a/arrow-version/_sass/components/docs/_sidebar-meta.scss
+++ b/arrow-version/_sass/components/docs/_sidebar-meta.scss
@@ -77,6 +77,7 @@
 #doc-meta-version-button {
     .sidebar-doc-versions {
         .sidebar-nav-item {
+            background: $meta-background;
             > a {
                 transition: background $base-duration $base-timing;
                 &:hover {
