--- a/arrow-version/_sass/components/docs/_sidebar-optics.scss
+++ b/arrow-version/_sass/components/docs/_sidebar-optics.scss
@@ -75,6 +75,7 @@
 #doc-optics-version-button {
     .sidebar-doc-versions {
         .sidebar-nav-item {
+            background: $optics-background;
             > a {
                 transition: background $base-duration $base-timing;
                 &:hover {
