--- a/arrow-version/_includes/_main.html
+++ b/arrow-version/_includes/_main.html
@@ -12,10 +12,10 @@
             <img id="{{ item.id }}-white" class="cat-icon-white" src="{{ item.icon }}-white.svg" alt="{{ item.title }} white">
             <img id="cat-icon-color-{{ item.id }}" class="cat-icon-color" src="{{ item.icon }}-color.svg" alt="{{ item.title }} color">
           </div>
-          <h2>{{ item.title }}</h2>
-          <p>{{ item.description }}</p>
+          <h2 id="{{ item.id }}-title">{{ item.title }}</h2>
+          <p  id="{{ item.id }}-description">{{ item.description }}</p>
         </div>
-        <a class="feature-button {{ item.id }}-button" href="{{ site.baseurl }}{{ item.url }}" title="{{ item.title }}">Learn more</a>
+        <a id="{{ item.id }}-button" class="feature-button {{ item.id }}-button" href="{{ site.baseurl }}{{ item.url }}" title="{{ item.title }}">Learn more</a>
       </div>
       {% endif %}
       {% endfor %}
