WIP setting home-code runable

--- a/arrow-version/_includes/_header.html
+++ b/arrow-version/_includes/_header.html
@@ -4,6 +4,30 @@
       <div class="header-text">
         <h1>{{site.data.commons.description}}</h1>
       </div>
+      <div class="doc-content">
+        {{
+          ```kotlin:ank
+          package example
+          import arrow.optics.dsl.*
+          ​
+          @optics data class Street(val number: Int, val name: String)
+          @optics data class Address(val city: String, val street: Street)
+          @optics data class Company(val name: String, val address: Address)
+          @optics data class Employee(val name: String, val company: Company?)
+          ​
+          val john = Employee("John Doe",
+              Company("Kategory",
+                Address("Functional city",
+                  Street(42, "lambda street")
+                )
+              )
+            )
+          ​
+          Employee.company.address.street.name.modify(john, String::toUpperCase)
+          // Result here
+          ```
+        }}
+      </div>
       <div class="header-image">
         <div id="base-arrow-animation" class="image-animation" alt="Arrow base"></div>
         <div id="core-arrow-animation" class="image-animation" alt="Arrow core"></div>
