--- a/arrow-blog-section/_sass/utils/_variables.scss
+++ b/arrow-blog-section/_sass/utils/_variables.scss
@@ -26,9 +26,9 @@ $search-hover: #222C31;
 
 // Typography
 // -----------------------------------------------
-$base-font-family: 'Iosevka', monospace;
+$base-font-family: 'Iosevka Web';
 $header-font-family: $base-font-family;
-$code-font-family: 'Source Code Pro', monospace;
+$code-font-family: $base-font-family;
 //-
 $base-font-color: $brand-primary;
 $header-font-color: $brand-primary;
