--- a/arrow-blog-section/css/styles.scss
+++ b/arrow-blog-section/css/styles.scss
@@ -11,6 +11,7 @@
 @import "base/reset";
 @import "base/base";
 @import "base/helpers";
+@import "base/fonts";
 
 // Components
 @import "components/button";
