--- a/arrow-version/_includes/_header.html
+++ b/arrow-version/_includes/_header.html
@@ -1,33 +1,15 @@
 <div id="site-header">
   <div class="wrapper">
     <div class="header-flex">
-      <div class="header-text">
+      <div id="header-text" class="header-text">
         <h1>{{site.data.commons.description}}</h1>
       </div>
-      <div class="doc-content">
-        {{
-          ```kotlin:ank
-          package example
-          import arrow.optics.dsl.*
-          ​
-          @optics data class Street(val number: Int, val name: String)
-          @optics data class Address(val city: String, val street: Street)
-          @optics data class Company(val name: String, val address: Address)
-          @optics data class Employee(val name: String, val company: Company?)
-          ​
-          val john = Employee("John Doe",
-              Company("Kategory",
-                Address("Functional city",
-                  Street(42, "lambda street")
-                )
-              )
-            )
-          ​
-          Employee.company.address.street.name.modify(john, String::toUpperCase)
-          // Result here
-          ```
-        }}
+      {% assign codeCol = site.code %}
+      {% for code in codeCol %}
+      <div id="{{code.library}}-code-block" class="home-doc-content">
+      {{ code }}
       </div>
+      {% endfor %}
       <div class="header-image">
         <div id="base-arrow-animation" class="image-animation" alt="Arrow base"></div>
         <div id="core-arrow-animation" class="image-animation" alt="Arrow core"></div>
