--- a/arrow-blog-section/css/styles.scss
+++ b/arrow-blog-section/css/styles.scss
@@ -19,4 +19,5 @@
 @import "components/tab";
 @import "components/icon-filter";
 @import "components/article-list";
+@import "components/books";
 @import "components/footer";
