--- a/arrow-blog-section/_includes/_icon-filter.html
+++ b/arrow-blog-section/_includes/_icon-filter.html
@@ -1,9 +1,9 @@
 <div id="icon-filter-tag">
     <div class="wrapper">
         <ul class="icon-row">
-            {% for icon in site.data.menu.icon-filter %}
-                {% assign icon-cat = icon.category | downcase %}
-                {% if page.tag == nil and icon-cat == 'allposts' %}
+            {% for item in site.data.menu.icon-filter %}
+                {% assign icon-cat = item.category | downcase %}
+                <!-- {% if page.tag == nil and icon-cat == 'allposts' %}
                     {% assign class = "icon-item active" %}
                     {% assign tabClass = "tab-item active" %}
                 {% elsif page.tag == icon-cat %}
@@ -12,12 +12,15 @@
                 {% else %}
                     {% assign class = "icon-item" %}
                     {% assign tabClass = "tab-item" %}
-                {% endif %}
-                <a href="{% if icon-cat == 'allposts' %}/media{% else %}{{site.data.tags.tag_page_dir}}/{{icon-cat | slugify: 'pretty'}}{% endif %}" alt="{{ icon.title }}">
+                {% endif %} -->
+                <a id="libraries" href="{% if icon-cat == 'allposts' %}/media{% else %}{{site.data.tags.tag_page_dir}}/{{icon-cat | slugify: 'pretty'}}{% endif %}" alt="{{ item.title }}">
                     <li id="icons-filter" class="{{ class }}">
-                        <div id="{{icon.category}}" class="{{ tabClass }}" onmouseover="applyingFocus(this)" onmouseout="losingFocus(this)"></div>
+                        <div id="{{item.category}}" class="{{ tabClass }}">
+                          <img id="{{ item.category }}-white" src="{{ item.icon-white | relative_url }}">
+                          <img id="{{ item.category }}-color" src="{{ item.icon-color | relative_url }}">
+                        </div>
                     </li>
-                    <span id="{{icon.category}}-span">{{icon.title}}</span>
+                    <span id="{{item.category}}-span">{{item.title}}</span>
                 </a>
             {% endfor %}
         </ul>
