--- a/arrow-version/css/home-styles.scss
+++ b/arrow-version/css/home-styles.scss
@@ -6,6 +6,9 @@
 @import "utils/mixins/breakpoint";
 @import "utils/mixins/links";
 
+// Vendors
+@import "vendors/animate";
+
 // Base
 @import "base/reset";
 @import "base/base";
