--- a/arrow-version/css/home-styles.scss
+++ b/arrow-version/css/home-styles.scss
@@ -14,6 +14,7 @@
 @import "base/base";
 @import "base/helpers";
 @import "base/fonts";
+@import "base/animated";
 
 // Components
 @import "components/common/button";
