--- a/arrow-version/_sass/components/home/_header.scss
+++ b/arrow-version/_sass/components/home/_header.scss
@@ -5,6 +5,7 @@
 #site-header {
     padding: ($base-point-grid * 24) 0 ($base-point-grid * 7) 0;
     position: relative;
+    z-index: 100;
 
     .header-flex {
         display: flex;
@@ -27,9 +28,8 @@
         .browser-content {
             position: absolute;
             top: -60px;
-            min-height: $height-home-code-block;
             width: 100%;
-            z-index: 0;
+            z-index: 100;
 
             .browser-header {
                 display: flex;
@@ -54,16 +54,47 @@
 
             .browser-code {
                 background: $white;
-                min-height: 350px;
                 box-shadow: 0 10px 10px rgba(#000, 0.1);
                 border-radius: 0 0 4px 4px;
-                .js-code-output-executor {
-                    border-top: 0;
+                
+                .CodeMirror {
+                    font-size: 13px;
+                    line-height: 1.6;
+                    
+                    pre {
+                        margin-bottom: 4px !important; 
+                    }
+                }
+                
+                .run-button,
+                .console-close {
+                    width: 24px;
+                    height: 24px;
+                    right: 10px;
+                    top: 10px;
+                }
+                
+                .run-button {
+                    background: url(../../../img/icon_play.svg) no-repeat;
+                }
+                
+                .console-close {
+                    background: url(../../../img/icon_close.svg) no-repeat;
+                    cursor: pointer;
+                }
+                
+                .output-wrapper {
+                    max-height: 250px;
+                    overflow-y: scroll;
+                    background: rgba($white, 0.9);
+                    font-size: 13px;
+                }
+                
+                .compiler-info {
+                    color: $white;
                 }
             }
         }
-
-
 
         #core-code-block {
             visibility: hidden;
