--- a/arrow-version/_sass/components/home/_header.scss
+++ b/arrow-version/_sass/components/home/_header.scss
@@ -83,6 +83,10 @@
                     cursor: pointer;
                 }
                 
+                .code-area {
+                    min-height: 300px;
+                }
+                
                 .output-wrapper {
                     max-height: 250px;
                     overflow-y: scroll;
