--- a/arrow-blog-section/_includes/_icon-filter.html
+++ b/arrow-blog-section/_includes/_icon-filter.html
@@ -1,26 +1,23 @@
 <div id="icon-filter-tag">
     <div class="wrapper">
-        <ul class="icon-row">
+        <ul id="features" class="icon-row">
             {% for item in site.data.menu.icon-filter %}
                 {% assign icon-cat = item.category | downcase %}
-                <!-- {% if page.tag == nil and icon-cat == 'allposts' %}
-                    {% assign class = "icon-item active" %}
-                    {% assign tabClass = "tab-item active" %}
+                {% if page.tag == nil and icon-cat == 'allposts' %}
+                    {% assign class = "active" %}
                 {% elsif page.tag == icon-cat %}
-                    {% assign class = "icon-item active" %}
-                    {% assign tabClass = "tab-item active" %}
+                    {% assign class = "active" %}
                 {% else %}
-                    {% assign class = "icon-item" %}
-                    {% assign tabClass = "tab-item" %}
-                {% endif %} -->
-                <a id="libraries" href="{% if icon-cat == 'allposts' %}/media{% else %}{{site.data.tags.tag_page_dir}}/{{icon-cat | slugify: 'pretty'}}{% endif %}" alt="{{ item.title }}">
-                    <li id="icons-filter" class="{{ class }}">
-                        <div id="{{item.category}}" class="{{ tabClass }}">
-                          <img id="{{ item.category }}-white" src="{{ item.icon-white | relative_url }}">
-                          <img id="{{ item.category }}-color" src="{{ item.icon-color | relative_url }}">
+                    {% assign class = "" %}
+                {% endif %}
+                <a id="{{ item.category }}" class="{{ class }}" href="{% if icon-cat == 'allposts' %}/media{% else %}{{site.data.tags.tag_page_dir}}/{{icon-cat | slugify: 'pretty'}}{% endif %}" alt="{{ item.title }}">
+                    <li id="icons-filter">
+                        <div id="{{item.category}}">
+                          <img id="{{ item.category }}-white" class="cat-icon-white {{ class }}" src="{{ item.icon-white | relative_url }}">
+                          <img id="{{ item.category }}-color" class="cat-icon-color {{ class }}" src="{{ item.icon-color | relative_url }}">
                         </div>
                     </li>
-                    <span id="{{item.category}}-span">{{item.title}}</span>
+                    <span id="{{item.category}}-span"  class="cat-span {{ class }}">{{item.title}}</span>
                 </a>
             {% endfor %}
         </ul>
