--- a/arrow-blog-section/_sass/components/_icon-filter.scss
+++ b/arrow-blog-section/_sass/components/_icon-filter.scss
@@ -2,12 +2,15 @@
 // -----------------------------------------------
 // -----------------------------------------------
 #icon-filter-tag {
+  min-height: 150px;
     .icon-row {
-        display: flex;
+        width: 100%;
+        display: inline-flex;
+        flex-wrap: wrap;
         justify-content: center;
-        min-height: 120px;
 
         a {
+            width: $column-2;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -26,10 +29,10 @@
                 color: $brand-primary;
                 text-decoration: none;
             }
-        }
 
-        @include bp(medium) {
-            flex-wrap: wrap;
+            @include bp(large) {
+                margin: $base-point-grid * 2 0;
+            }
         }
 
         #icons-filter {
