Mobile mode style advances

--- a/arrow-version/_sass/components/home/_nav.scss
+++ b/arrow-version/_sass/components/home/_nav.scss
@@ -77,6 +77,12 @@
         padding-left: $base-point-grid;
         font-size: 22px;
         letter-spacing: 3px;
+
+        &.mobile {
+          &:hover {
+            color: white;
+          }
+        }
       }
     }
 
@@ -102,10 +108,16 @@
               text-decoration: none;
               border-bottom: 2px solid $brand-primary;
             }
-            
+
             &.hover-mode {
               &:hover {
                 color: $white;
+              }
+            }
+
+            &.mobile {
+              &:hover {
+                color: white;
               }
             }
           }
@@ -114,41 +126,28 @@
     }
 
     .nav-icon-open {
-      padding: 16px;
-      margin: -16px;
       display: none;
       transition: transform $base-duration $base-timing;
 
       &:hover {
         transform: scaleX(1.5);
       }
-
-      #nav-icon-open-white {
-        opacity: 0;
-        color: $white;
-        position: absolute;
-        transition: $opacity-transition;
-      }
-
-      #nav-icon-open-dark {
-        transition: $opacity-transition;
-      }
     }
 
     .nav-icon-close {
-      display: none;
-      padding: 6px;
-      left: 80%;
-      top: 32px;
+        display: none;
+        padding: 6px;
+        left: 85%;
+        top: 32px;
 
-      img {
-        display: block;
-        transition: transform 0.3s ease;
+        img {
+            display: block;
+            transition: transform .3s ease;
 
-        &:hover {
-          transform: rotate(180deg);
+            &:hover {
+              transform: rotate(180deg);
+            }
         }
-      }
     }
   }
 }
@@ -156,11 +155,12 @@
 // -----------------------------------------------
 @include bp(medium) {
   #site-nav {
+    background: rgba($core-background, 0.9);
     .nav-flex {
       .nav-menu {
         position: fixed;
-        padding: ($base-point-grid * 4) ($base-point-grid * 6);
-        background: rgba($background-color, 0.97);
+        padding: ($base-point-grid) ($base-point-grid * 6);
+        background: $core-background;
         height: 100%;
         right: -100%;
         top: 0;
