--- a/arrow-version/_sass/components/home/_nav.scss
+++ b/arrow-version/_sass/components/home/_nav.scss
@@ -77,12 +77,6 @@
         padding-left: $base-point-grid;
         font-size: 22px;
         letter-spacing: 3px;
-
-        &.mobile {
-          &:hover {
-            color: white;
-          }
-        }
       }
     }
 
@@ -112,12 +106,6 @@
             &.hover-mode {
               &:hover {
                 color: $white;
-              }
-            }
-
-            &.mobile {
-              &:hover {
-                color: white;
               }
             }
           }
@@ -158,7 +146,7 @@
     .nav-flex {
       .nav-menu {
         position: fixed;
-        padding: ($base-point-grid) ($base-point-grid * 6);
+        padding: ($base-point-grid * 4) ($base-point-grid * 6);
         background: $core-background;
         height: 100%;
         right: -100%;
@@ -181,6 +169,9 @@
               margin-right: 0;
             }
           }
+        }
+        &.top-scroll {
+          padding-top: $base-point-grid;
         }
       }
 
