--- a/arrow-site/doc/_sass/components/docs/_doc-header.scss
+++ b/arrow-site/doc/_sass/components/docs/_doc-header.scss
@@ -25,6 +25,7 @@
             cursor: auto;
             position: relative;
             outline: none;
+             -webkit-appearance: textfield;
         }
 
         /* clears the 'X' from Internet Explorer */
