Modifies transition attributes in button

--- a/modules/docs/arrow-docs/docs/_sass/components/home/_header.scss
+++ b/modules/docs/arrow-docs/docs/_sass/components/home/_header.scss
@@ -270,7 +270,7 @@
     font-weight: normal;
     width: 60%;
     text-transform: uppercase;
-    transition: color $base-duration $base-timing;
+    transition: all $base-duration $base-timing;
 
     &:hover {
       background-color: var(--color-primary);
