Adds gemfile to include jekyll-tagging dependecy and modifies style for links in post section

--- a/arrow-site/blog/_sass/components/_article-list.scss
+++ b/arrow-site/blog/_sass/components/_article-list.scss
@@ -1,4 +1,8 @@
 #article-list {
+    a {
+      text-decoration: underline; 
+    }
+
     .main-flex {
         display: flex;
         flex-wrap: wrap;
